--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "build": "node build.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,10 @@
   },
   "devDependencies": {
     "cz-conventional-changelog": "^2.0.0",
+    "glob": "^7.1.2",
+    "rollup": "^0.45.2",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "semantic-release": "^6.3.6"
   },
   "config": {
