--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ notifications:
   email: false
 node_js:
   - '8'
+before_script:
+  - npm run build
 after_success:
   - npm run semantic-release
 branches:
